Use Files.readString instead of Files.readAllBytes (#5428)
The former avoids creating a copy of byte array,
so it's slightly more performant